# ZerodhaCLI

./: README.md  info.md  pyproject.toml
docs/: ROADMAP.md  USAGE.md
src/zerodhacli/: __init__.py  __main__.py
src/zerodhacli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/zerodhacli/cli/: __init__.py  app.py
src/zerodhacli/core/: __init__.py  config.py  models.py  rate_limit.py
src/zerodhacli/services/: __init__.py  container.py  gtt_manager.py  kite_client.py  order_index.py  order_router.py  portfolio.py  quote.py  ticker.py
src/zerodhacli/utils/: integrity.py
tests/: conftest.py  test_cli_pnl.py  test_config.py  test_order_router.py  test_portfolio_service.py  test_quote_service.py
