[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerodhacli"
version = "0.1.0"
description = "Insilico-style trading CLI for Zerodha Kite Connect"
authors = [{name = "Walnut"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "asyncio-throttle>=1.0.2"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.3"]

[project.scripts]
zerodhacli = "zerodhacli.__main__:app"
